--- a/templates/order/order.style.css
+++ b/templates/order/order.style.css
@@ -4,7 +4,9 @@
 
 /* Simple CSS Reset and Print options
 ------------------------------------------*/
-
+@page {
+    size: portrait;
+}
 
 html, body, div, span, h1, h2, h3, h4, h5, h6, p, a, table, ol, ul, dl, li, dt, dd {
     border: 0 none;
